@@ -23,6 +23,7 @@ return array(
     'ezcDocumentWikiTokenizerException'                  => 'Document/exceptions/wiki_tokenizer.php',
     'ezcDocumentElementVisitorHandler'                   => 'Document/converters/element_visitor_handler.php',
     'ezcDocumentErrorReporting'                          => 'Document/interfaces/error_reporting.php',
+    'ezcDocumentPdfRenderer'                             => 'Document/document/pdf/renderer.php',
     'ezcDocumentWikiNode'                                => 'Document/document/wiki/node.php',
     'ezcDocumentWikiToken'                               => 'Document/document/wiki/token.php',
     'ezcDocument'                                        => 'Document/interfaces/document.php',
@@ -32,8 +33,8 @@ return array(
     'ezcDocumentDocbookToWikiBaseHandler'                => 'Document/converters/element_visitor/docbook/wiki/handler.php',
     'ezcDocumentOptions'                                 => 'Document/options/document.php',
     'ezcDocumentPdfPart'                                 => 'Document/document/pdf/part.php',
-    'ezcDocumentPdfRenderer'                             => 'Document/document/pdf/renderer.php',
     'ezcDocumentPdfStyleValue'                           => 'Document/document/pdf/style/value.php',
+    'ezcDocumentPdfTextBoxRenderer'                      => 'Document/document/pdf/renderer/text_box.php',
     'ezcDocumentRstDirective'                            => 'Document/document/rst/directive.php',
     'ezcDocumentRstNode'                                 => 'Document/document/rst/node.php',
     'ezcDocumentRstVisitor'                              => 'Document/document/rst/visitor.php',
@@ -57,8 +58,8 @@ return array(
     'ezcDocumentPdfImageHandler'                         => 'Document/document/pdf/image/handler.php',
     'ezcDocumentPdfLocateable'                           => 'Document/document/pdf/locateable.php',
     'ezcDocumentPdfStyleBoxValue'                        => 'Document/document/pdf/style/box_value.php',
-    'ezcDocumentPdfTextBoxRenderer'                      => 'Document/document/pdf/renderer/text_box.php',
     'ezcDocumentPdfTokenizer'                            => 'Document/document/pdf/tokenizer.php',
+    'ezcDocumentPdfWrappingTextBoxRenderer'              => 'Document/document/pdf/renderer/paragraph.php',
     'ezcDocumentRstBlockNode'                            => 'Document/document/rst/nodes/block.php',
     'ezcDocumentRstImageDirective'                       => 'Document/document/rst/directive/image.php',
     'ezcDocumentRstLinkNode'                             => 'Document/document/rst/nodes/link.php',
@@ -197,6 +198,8 @@ return array(
     'ezcDocumentPdfHeaderPdfPart'                        => 'Document/document/pdf/part/header.php',
     'ezcDocumentPdfImage'                                => 'Document/document/pdf/image.php',
     'ezcDocumentPdfInferencableDomElement'               => 'Document/document/pdf/dom_element.php',
+    'ezcDocumentPdfLiteralBlockRenderer'                 => 'Document/document/pdf/renderer/literal_block.php',
+    'ezcDocumentPdfLiteralTokenizer'                     => 'Document/document/pdf/tokenizer/literal.php',
     'ezcDocumentPdfMainRenderer'                         => 'Document/document/pdf/renderer/main.php',
     'ezcDocumentPdfMeasure'                              => 'Document/document/pdf/measure.php',
     'ezcDocumentPdfMediaObjectRenderer'                  => 'Document/document/pdf/renderer/mediaobject.php',
@@ -220,7 +223,6 @@ return array(
     'ezcDocumentPdfTitleRenderer'                        => 'Document/document/pdf/renderer/title.php',
     'ezcDocumentPdfTransactionalDriverWrapper'           => 'Document/document/pdf/driver/wrapper.php',
     'ezcDocumentPdfTransactionalDriverWrapperState'      => 'Document/document/pdf/driver/wrapper_state.php',
-    'ezcDocumentPdfWrappingTextBoxRenderer'              => 'Document/document/pdf/renderer/paragraph.php',
     'ezcDocumentRst'                                     => 'Document/document/rst.php',
     'ezcDocumentRstAnonymousLinkNode'                    => 'Document/document/rst/nodes/link_anonymous.php',
     'ezcDocumentRstAnonymousReferenceNode'               => 'Document/document/rst/nodes/anon_reference.php',
