@@ -27,6 +27,8 @@ require 'image_handler.php';
 require 'page_tests.php';
 require 'pcss_parser_tests.php';
 require 'renderer_paragraph_tests.php';
+require 'renderer_text_box_tests.php';
+require 'renderer_literallayout_tests.php';
 require 'render_text_decorations_tests.php';
 require 'renderer_main_tests.php';
 require 'renderer_footer_part_tests.php';
@@ -60,6 +62,8 @@ class ezcDocumentPdfSuite extends PHPUnit_Framework_TestSuite
         $this->addTest( ezcDocumentPdfPageTests::suite() );
         $this->addTest( ezcDocumentPdfCssParserTests::suite() );
         $this->addTest( ezcDocumentPdfParagraphRendererTests::suite() );
+        $this->addTest( ezcDocumentPdfTextBoxRendererTests::suite() );
+        $this->addTest( ezcDocumentPdfLiterallayoutRendererTests::suite() );
         $this->addTest( ezcDocumentPdfRendererTextDecorationsTests::suite() );
         $this->addTest( ezcDocumentPdfMainRendererTests::suite() );
         $this->addTest( ezcDocumentPdfRendererFooterPartTests::suite() );
